--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
   },
   "peerDependencies": {
     "i18next": "^23.10.1",
-    "react-i18next": "^15.0.1"
+    "react-i18next": "^15.0.1",
+    "express": "^4.21.1"
   }
 }
